RKV 3 connection failure

--- a/report.yml
+++ b/report.yml
@@ -11,3 +11,5 @@
             url: https://bit.ly/3dtJtR7
             dest: /home/ansible/lab-error-handling/transaction_list
         - debug: msg="File downloaded"
+      rescue:
+        - debug: msg="Site appears to be down.  Try again later."
