--- a/report.yml
+++ b/report.yml
@@ -13,3 +13,5 @@
         - debug: msg="File downloaded"
       rescue:
         - debug: msg="Site appears to be down.  Try again later."
+      always:
+        - debug: msg="Attempt completed."
