--- a/report.yml
+++ b/report.yml
@@ -10,6 +10,10 @@
         - get_url:
             url: https://bit.ly/3dtJtR7
             dest: /home/ansible/lab-error-handling/transaction_list
+        - replace:
+            path: /home/ansible/lab-error-handling/transaction_list
+            regexp: "#BLANKLINE"
+            replace: '\n'
         - debug: msg="File downloaded"
       rescue:
         - debug: msg="Site appears to be down.  Try again later."
